--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ header .navbar {
     text-align: center;
     flex-wrap: wrap;
     justify-content: center;
+    min-height:100px;
 }
 
 header .navbar li a:hover {
