--- a/style.css
+++ b/style.css
@@ -1,129 +1,8 @@
 
-
-.leo {
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-}
-
-.blue-orbit {
-	width: 165px;
-	height: 165px;
-  border: 1px solid #91daffa5;
-  -webkit-animation: spin3D 3s linear .2s infinite;
-}
-
-.green-orbit {
-	width: 120px;
-	height: 120px;
-  border: 1px solid #91ffbfa5;
-  -webkit-animation: spin3D 2s linear 0s infinite;
-}
-
-.red-orbit {
-	width: 90px;
-	height: 90px;
-  border: 1px solid #ffca91a5;
-  -webkit-animation: spin3D 1s linear 0s infinite;
-}
-
-.white-orbit {
-	width: 60px;
-	height: 60px;
-  border: 2px solid #ffffff;
-  -webkit-animation: spin3D 10s linear 0s infinite;
-}
-
-.w1 {
-  transform: rotate3D(1, 1, 1, 90deg);
-}
-
-.w2 {
-  transform: rotate3D(1, 2, .5, 90deg);
-}
-
-.w3 {
-  transform: rotate3D(.5, 1, 2, 90deg);
-}
-
-.three-quarter-spinner {
-  width: 50px;
-  height: 50px;
-  border: 3px solid #fb5b53;
-  border-top: 3px solid transparent;
-  border-radius: 50%;
-  animation: spin .5s linear 0s infinite;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 
 @import  url(https://fonts.googleapis.com/css?family=Montserrat);
-
-
-$width: 15px;
-$height: 15px;
-
-
-$bounce_height: 30px;
-
-body {
-  position: relative; 
-  width: 100%;
-  height: 100vh;
-  font-family: Montserrat;
-}
-
-.wrap {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.text {
-  color: #fbae17;
-  display: inline-block;
-  margin-left: 5px;
-}
-
-.bounceball {
-  position: relative;
-  display: inline-block;
-  height: 37px;
-  width: $width;
-  &:before {
-    position: absolute;
-    content: '';
-    display: block;
-    top: 0;
-    width: $width;
-    height: $height;
-    border-radius: 50%;
-    background-color: #fbae17;
-    transform-origin: 50%;
-    animation: bounce 500ms alternate infinite ease;
-  }
-}
-
-@keyframes bounce {
-  0% {
-    top: $bounce_height;
-    height: 5px;
-    border-radius: 60px 60px 20px 20px;
-    transform: scaleX(2);
-  }
-  35% {
-    height: $height;
-    border-radius: 50%;
-    transform: scaleX(1);
-  }
-  100% {
-    top: 0;
-  }
-}
 
 * {
     margin: 0px;
@@ -159,9 +38,9 @@ header {
     backdrop-filter: blur(18px);
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     text-transform: uppercase;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 header .logo h1 {
